[gd_scene load_steps=40 format=3 uid="uid://nwb8qkyyukbf"]

[ext_resource type="Script" path="res://enemies/time/clock_enemy.gd" id="1_gipin"]
[ext_resource type="Texture2D" uid="uid://c7hmfq6jp5dp" path="res://assets/chars/grandfather_clock_enemy.png" id="2_1m6km"]
[ext_resource type="AudioStream" uid="uid://ekvnwconn7xa" path="res://assets/audio/grind_bones/1.wav" id="3_c1gan"]
[ext_resource type="AudioStream" uid="uid://b2nf6t3uvsuhm" path="res://assets/audio/grind_bones/2.wav" id="4_e57qo"]
[ext_resource type="AudioStream" uid="uid://b6u06kvcsbash" path="res://assets/audio/grind_bones/3.wav" id="5_32yai"]
[ext_resource type="AudioStream" uid="uid://77474aattbla" path="res://assets/audio/grind_bones/4.wav" id="6_kwrbx"]
[ext_resource type="AudioStream" uid="uid://cctgmcwbey0jn" path="res://assets/audio/grind_bones/5.wav" id="7_8ut3p"]
[ext_resource type="AudioStream" uid="uid://bmv0pklng26la" path="res://assets/audio/grind_gears/grind_gears_1.wav" id="8_pj0a5"]
[ext_resource type="AudioStream" uid="uid://bf6vhxwlkkx7b" path="res://assets/audio/grind_gears/grind_gears_2.wav" id="9_nb6iq"]
[ext_resource type="AudioStream" uid="uid://co0sm6y0fhb27" path="res://assets/audio/grind_gears/grind_gears_3.wav" id="10_bacbo"]
[ext_resource type="AudioStream" uid="uid://qxxhs3dubjbl" path="res://assets/audio/grind_gears/grind_gears_4.wav" id="11_rf0mk"]
[ext_resource type="AudioStream" uid="uid://dbn8hcvk42w1o" path="res://assets/audio/grind_gears/grind_gears_5.wav" id="12_s4kqd"]
[ext_resource type="AudioStream" uid="uid://ji51hv131613" path="res://assets/audio/grind_gears/grind_gears_6.wav" id="13_yjxyg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_idmc1"]
size = Vector2(14, 7)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_84r05"]
animation = &"back_idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_yyona"]
animation = &"front_idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_yk0pm"]
animation = &"back_idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_eth0o"]
animation = &"back_idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_bg4df"]
animation = &"front_idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_txxu2"]
animation = &"front_idle"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_0pccb"]
blend_point_0/node = SubResource("AnimationNodeAnimation_84r05")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_yyona")
blend_point_1/pos = Vector2(0, -1)
blend_point_2/node = SubResource("AnimationNodeAnimation_yk0pm")
blend_point_2/pos = Vector2(-1, 1)
blend_point_3/node = SubResource("AnimationNodeAnimation_eth0o")
blend_point_3/pos = Vector2(1, 1)
blend_point_4/node = SubResource("AnimationNodeAnimation_bg4df")
blend_point_4/pos = Vector2(1, -1)
blend_point_5/node = SubResource("AnimationNodeAnimation_txxu2")
blend_point_5/pos = Vector2(-1, -1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_a5bt6"]
animation = &"back_walk"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_lxh48"]
animation = &"back_walk"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_7hgxa"]
animation = &"back_walk"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ultp7"]
animation = &"front_walk"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_iuxxw"]
animation = &"front_walk"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_sqt66"]
animation = &"front_walk"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_qiuoc"]
blend_point_0/node = SubResource("AnimationNodeAnimation_a5bt6")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_lxh48")
blend_point_1/pos = Vector2(1, 1)
blend_point_2/node = SubResource("AnimationNodeAnimation_7hgxa")
blend_point_2/pos = Vector2(-1, 1)
blend_point_3/node = SubResource("AnimationNodeAnimation_ultp7")
blend_point_3/pos = Vector2(-1, -1)
blend_point_4/node = SubResource("AnimationNodeAnimation_iuxxw")
blend_point_4/pos = Vector2(0, -1)
blend_point_5/node = SubResource("AnimationNodeAnimation_sqt66")
blend_point_5/pos = Vector2(1, -1)

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_5rayv"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_wvh88"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_4qej8"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_6mer3"]
states/Idle/node = SubResource("AnimationNodeBlendSpace2D_0pccb")
states/Idle/position = Vector2(380, 100.5)
states/Walk/node = SubResource("AnimationNodeBlendSpace2D_qiuoc")
states/Walk/position = Vector2(572, 101)
transitions = ["Idle", "Walk", SubResource("AnimationNodeStateMachineTransition_5rayv"), "Walk", "Idle", SubResource("AnimationNodeStateMachineTransition_wvh88"), "Start", "Idle", SubResource("AnimationNodeStateMachineTransition_4qej8")]

[sub_resource type="Animation" id="Animation_7dvs1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GrandfatherClockEnemy:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_mpunx"]
resource_name = "back_idle"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GrandfatherClockEnemy:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [5, 6, 7, 8, 9]
}

[sub_resource type="Animation" id="Animation_nxrte"]
resource_name = "back_walk"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GrandfatherClockEnemy:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [15, 16, 17, 18, 19]
}

[sub_resource type="Animation" id="Animation_306fe"]
resource_name = "front_idle"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GrandfatherClockEnemy:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_yb68m"]
resource_name = "front_walk"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GrandfatherClockEnemy:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [10, 11, 12, 13, 14]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_56q2q"]
_data = {
"RESET": SubResource("Animation_7dvs1"),
"back_idle": SubResource("Animation_mpunx"),
"back_walk": SubResource("Animation_nxrte"),
"front_idle": SubResource("Animation_306fe"),
"front_walk": SubResource("Animation_yb68m")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_ctwwp"]
radius = 124.0

[node name="clock_enemy" type="AnimatableBody2D"]
y_sort_enabled = true
sync_to_physics = false
script = ExtResource("1_gipin")

[node name="GrandfatherClockEnemy" type="Sprite2D" parent="."]
y_sort_enabled = true
texture = ExtResource("2_1m6km")
offset = Vector2(2.08165e-12, -10)
hframes = 5
vframes = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -2.5)
shape = SubResource("RectangleShape2D_idmc1")

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_6mer3")
anim_player = NodePath("../AnimationPlayer")
parameters/Idle/blend_position = Vector2(-1, -0.0108932)
parameters/Walk/blend_position = Vector2(0, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_56q2q")
}

[node name="Timer" type="Timer" parent="."]

[node name="aggro_timer" type="Timer" parent="."]

[node name="grind_bones_audio" type="Node" parent="."]

[node name="grind_bones_1" type="AudioStreamPlayer2D" parent="grind_bones_audio"]
stream = ExtResource("3_c1gan")
bus = &"Audio"

[node name="grind_bones_2" type="AudioStreamPlayer2D" parent="grind_bones_audio"]
stream = ExtResource("4_e57qo")
bus = &"Audio"

[node name="grind_bones_3" type="AudioStreamPlayer2D" parent="grind_bones_audio"]
stream = ExtResource("5_32yai")
bus = &"Audio"

[node name="grind_bones_4" type="AudioStreamPlayer2D" parent="grind_bones_audio"]
stream = ExtResource("6_kwrbx")
bus = &"Audio"

[node name="grind_bones_5" type="AudioStreamPlayer2D" parent="grind_bones_audio"]
stream = ExtResource("7_8ut3p")
bus = &"Audio"

[node name="grind_gears_audio" type="Node" parent="."]

[node name="grind_gears_1" type="AudioStreamPlayer2D" parent="grind_gears_audio"]
stream = ExtResource("8_pj0a5")
bus = &"Audio"

[node name="grind_gears_2" type="AudioStreamPlayer2D" parent="grind_gears_audio"]
stream = ExtResource("9_nb6iq")
bus = &"Audio"

[node name="grind_gears_3" type="AudioStreamPlayer2D" parent="grind_gears_audio"]
stream = ExtResource("10_bacbo")
bus = &"Audio"

[node name="grind_gears_4" type="AudioStreamPlayer2D" parent="grind_gears_audio"]
stream = ExtResource("11_rf0mk")
bus = &"Audio"

[node name="grind_gears_5" type="AudioStreamPlayer2D" parent="grind_gears_audio"]
stream = ExtResource("12_s4kqd")
bus = &"Audio"

[node name="grind_gears_6" type="AudioStreamPlayer2D" parent="grind_gears_audio"]
stream = ExtResource("13_yjxyg")
bus = &"Audio"

[node name="aggro_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="aggro_area"]
position = Vector2(0, -9)
shape = SubResource("CircleShape2D_ctwwp")
